--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ebs flix</title>
+    <ttle>ebs flix</title> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="css.css">
     <script src="script.js"></script>
@@ -12,7 +12,7 @@
 </head>
 <body>  
   <div class="nome text-center">
-    <h1>EBS FLIX </h1>
+      <h1>EBS FLIX </h1><h6>oiii</h6>     
  </div>
  <nav class="navbar navbar-expand-lg bg-sucesso" height="30">
     <div class="container">
