--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>  
   <div class="nome text-center">
-      <h1>EBS FLIX </h1><h6>oiii</h6>     
+      <h1>EBS FLIX </h1>     
  </div>
  <nav class="navbar navbar-expand-lg bg-sucesso" height="30">
     <div class="container">
