organizando capas img

--- a/index.html
+++ b/index.html
@@ -57,39 +57,40 @@
                  <a href="#" class=""onclick="btc()">Asisstir</a>
                </div>
              <div class="col-md-3">
-                <img src="img/caçando_abravo.jpg" class="img-fluid" alt="....">
+                <img src="img/caçando_abravo.jpg" class="img-fluid" alt="...."><br><br>
                 <a href="#" class=""onclick="bte()">Asisstir</a>
             </div><p>___________________________________________________________________________________________________</p>
             <div class="col-md-3">
-                <img src="img/vesões_de_um_crime.jpg" class="img-fluid" alt="....">
+                <img src="img/vesões_de_um_crime.jpg" class="img-fluid" alt="...."><br><br>
                 <a href="#" class=""onclick="btb()">Asisstir</a>
             </div>
             <div class="col-md-3">
-              <img src="img/operação_retorno_a_basa.jpg" class="img-fluid" alt="....">
+              <img src="img/operação_retorno_a_basa.jpg" class="img-fluid" alt="...."><br><br>
               <a href="#" class=""onclick="btu()">Asisstir</a>
           </div>
           <div class="col-md-3">
-            <img src="img/corpo fechado.jpg" class="img-fluid" alt="....">
+            <img src="img/corpo fechado.jpg" class="img-fluid" alt="...."><br><br>
             <a href="#" class=""onclick="bti()">Asisstir</a>
         </div>
         <div class="col-md-3">
-         <img src="img/revolta.jpg" class="img-fluid" alt="....">
+         <img src="img/revolta.jpg" class="img-fluid" alt="...."><br><br>
          <a href="#" class=""onclick="btd()">Asisstir</a>
          </div><p>___________________________________________________________________________________________________</p>
          <div class="col-md-3">
-            <img src="img/ate a morte.jpg" class="img-fluid" alt="....">
+            <img src="img/ate a morte.jpg" class="img-fluid" alt="...."><br><br>
             <a href="#" class=""onclick="bt1()">Asisstir</a>
             </div>
             <div class="col-md-3">
                <img src="img/codigo imperador.jpg" class="img-fluid" alt="....">
+               <br><br>
                <a href="#" class=""onclick="bt2()">Asisstir</a>
                </div>
                <div class="col-md-3">
-                  <img src="img/sequestro.jpg" class="img-fluid" alt="....">
+                  <img src="img/sequestro.jpg" class="img-fluid" alt="...."><br><br>
                   <a href="#" class=""onclick="bt3()">Asisstir</a>
                   </div>
                   <div class="col-md-3">
-                     <img src="img/a fera.jpg" class="img-fluid" alt="....">
+                     <img src="img/a fera.jpg" class="img-fluid" alt="...."><br><br>
                      <a href="#" class=""onclick="bt4()">Asisstir</a>
                      </div><p>___________________________________________________________________________________________________</p>
                       <div class="container">
