testando alinhamento img

--- a/index.html
+++ b/index.html
@@ -60,22 +60,22 @@
          <div class="container 1">
             <div1 class="row">
              <div class="col-md-3">
-                 <img src="img/a_vingaça_de_scar.jpg" class="img-fluid" alt="....">
+                 <img src="https://media-private.canva.com/eDMzI/MAFMKgeDMzI/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220913%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220913T084954Z&X-Amz-Expires=82335&X-Amz-Signature=a3ebdb0fde927911e2bfec92980fbfb2d3810cfdba0218c2e5669303d6bb9c2d&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2014%20Sep%202022%2007%3A42%3A09%20GMT" class="img-fluid" alt="....">
                  <br><br>
                  <a href="#" class=""onclick="bta()">Asisstir</a>
                  </div>
                  <div class="col-md-3">
-                 <img src="img/blood.jpg" class="img-fluid" alt="....">
+                 <img src="https://media-private.canva.com/mgtyQ/MAFMKrmgtyQ/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220913%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220913T191226Z&X-Amz-Expires=43521&X-Amz-Signature=160c533379c9fa99f7262557332d798230f00f268e0c90f4b2b9e30bc35076de&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2014%20Sep%202022%2007%3A17%3A47%20GMT" class="img-fluid" alt="....">
                   <br><br>
                   <a href="#" class=""onclick="bto()">Asisstir</a>
                </div>
                <div class="col-md-3">
-                 <img src="img/filme_sin-sity.jpg" class="img-fluid" alt="....">
+                 <img src="https://media-private.canva.com/afma8/MAFMKxafma8/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220913%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220913T125113Z&X-Amz-Expires=70828&X-Amz-Signature=e6553e3da4b4c97dfb2c796799d8cae0d54cb639b767e448e2474fe4ff11068c&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2014%20Sep%202022%2008%3A31%3A41%20GMT" class="img-fluid" alt="....">
                  <br><br>
                  <a href="#" class=""onclick="btc()">Asisstir</a>
                </div>
              <div class="col-md-3">
-                <img src="img/caçando_abravo.jpg" class="img-fluid" alt="....">
+                <img src="https://media-private.canva.com/Aw6js/MAFMKzAw6js/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220913%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220913T153557Z&X-Amz-Expires=57928&X-Amz-Signature=1f40c2a084597dfc5d651a647d2b73f0cc5c89deaab01cade691b4ce724aba71&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2014%20Sep%202022%2007%3A41%3A25%20GMT" class="img-fluid" alt="....">
                 <a href="#" class=""onclick="bte()">Asisstir</a>
             </div><p>___________________________________________________________________________________________________</p>
             <div class="col-md-3">
@@ -95,7 +95,7 @@
          <a href="#" class=""onclick="btd()">Asisstir</a>
          </div><p>___________________________________________________________________________________________________</p>
          <div class="col-md-3">
-            <img src="img/ate a morte.jpg" class="img-fluid" alt="...."><br><br>
+            <img src="https://media-private.canva.com/-9HgI/MAFMK5-9HgI/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220913%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220913T052631Z&X-Amz-Expires=93171&X-Amz-Signature=805c24d1d62159072302f71b32b28ff44bad3a4e0084d9a6ffa7a4cc7c17ebf6&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2014%20Sep%202022%2007%3A19%3A22%20GMT" class="img-fluid" alt="...."><br><br>
             <a href="#" class=""onclick="bt1()">Asisstir</a>
             </div>
             <div class="col-md-3">
