terminei  organizar img

--- a/index.html
+++ b/index.html
@@ -75,23 +75,23 @@
                  <a href="#" class=""onclick="btc()">Asisstir</a>
                </div>
              <div class="col-md-3">
-                <img src="https://media-private.canva.com/Aw6js/MAFMKzAw6js/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220913%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220913T153557Z&X-Amz-Expires=57928&X-Amz-Signature=1f40c2a084597dfc5d651a647d2b73f0cc5c89deaab01cade691b4ce724aba71&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2014%20Sep%202022%2007%3A41%3A25%20GMT" class="img-fluid" alt="....">
+                <img src="https://media-private.canva.com/Aw6js/MAFMKzAw6js/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220913%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220913T153557Z&X-Amz-Expires=57928&X-Amz-Signature=1f40c2a084597dfc5d651a647d2b73f0cc5c89deaab01cade691b4ce724aba71&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2014%20Sep%202022%2007%3A41%3A25%20GMT" class="img-fluid" alt="...."><br><br>
                 <a href="#" class=""onclick="bte()">Asisstir</a>
             </div><p>___________________________________________________________________________________________________</p>
             <div class="col-md-3">
-                <img src="img/vesões_de_um_crime.jpg" class="img-fluid" alt="....">
+                <img src="https://media-private.canva.com/mYNnE/MAFMNEmYNnE/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220913%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220913T125929Z&X-Amz-Expires=98644&X-Amz-Signature=a8e4a88560923dd434dbcdde47c8f3dcac6f7e1cb2218308527c1b9513e3b146&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2014%20Sep%202022%2016%3A23%3A33%20GMT" class="img-fluid" alt="...."><br><br>
                 <a href="#" class=""onclick="btb()">Asisstir</a>
             </div>
             <div class="col-md-3">
-              <img src="img/operação_retorno_a_basa.jpg" class="img-fluid" alt="....">
+              <img src="https://media-private.canva.com/2S4lM/MAFMNE2S4lM/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220914%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220914T001720Z&X-Amz-Expires=61211&X-Amz-Signature=0ea75a7b9794ad2622b1d30f32f7764c391d0644d5d68036ae110c17ed3d8c5e&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2014%20Sep%202022%2017%3A17%3A31%20GMT" class="img-fluid" alt="...."><br><br>
               <a href="#" class=""onclick="btu()">Asisstir</a>
           </div>
           <div class="col-md-3">
-            <img src="img/corpo fechado.jpg" class="img-fluid" alt="....">
+            <img src="https://media-private.canva.com/eOr8s/MAFMNLeOr8s/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220914%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220914T004448Z&X-Amz-Expires=58179&X-Amz-Signature=1ccf37cb525f77a0fbe7c6f3d806b965e55e08dfc6454dc988f2ade7c2fff531&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2014%20Sep%202022%2016%3A54%3A27%20GMT" class="img-fluid" alt="...."><br><br>
             <a href="#" class=""onclick="bti()">Asisstir</a>
         </div>
         <div class="col-md-3">
-         <img src="img/revolta.jpg" class="img-fluid" alt="...."><br><br>
+         <img src="https://media-private.canva.com/AS1Nc/MAFMNNAS1Nc/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220914%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220914T123348Z&X-Amz-Expires=17240&X-Amz-Signature=83a490c113bba8dbf2b420cbc728836b669630dd4ca757bbfe0a069034557ae6&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2014%20Sep%202022%2017%3A21%3A08%20GMT" class="img-fluid" alt="...."><br><br>
          <a href="#" class=""onclick="btd()">Asisstir</a>
          </div><p>___________________________________________________________________________________________________</p>
          <div class="col-md-3">
@@ -99,15 +99,15 @@
             <a href="#" class=""onclick="bt1()">Asisstir</a>
             </div>
             <div class="col-md-3">
-               <img src="img/codigo imperador.jpg" class="img-fluid" alt="....">
+               <img src="https://media-private.canva.com/wQerU/MAFMNLwQerU/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220913%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220913T135314Z&X-Amz-Expires=97234&X-Amz-Signature=e0f2c98d4d9c565c3459dae3c51b140bebbe43d61ca38c22e7bd5920f18e431d&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2014%20Sep%202022%2016%3A53%3A48%20GMT" class="img-fluid" alt="...."><br><br>
                <a href="#" class=""onclick="bt2()">Asisstir</a>
                </div>
                <div class="col-md-3">
-                  <img src="img/sequestro.jpg" class="img-fluid" alt="....">
+                  <img src="https://media-private.canva.com/8TliQ/MAFMNK8TliQ/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220913%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220913T211559Z&X-Amz-Expires=71332&X-Amz-Signature=9645b127a50a674b8b49f2a84c48ece11c2ef10ffe316343fb8d2311cdd5dce0&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2014%20Sep%202022%2017%3A04%3A51%20GMT" class="img-fluid" alt="...."><br><br>
                   <a href="#" class=""onclick="bt3()">Asisstir</a>
                   </div>
                   <div class="col-md-3">
-                     <img src="img/a fera.jpg" class="img-fluid" alt="....">
+                     <img src="https://media-private.canva.com/AyAgs/MAFMNCAyAgs/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220913%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220913T232909Z&X-Amz-Expires=65253&X-Amz-Signature=14700454eef5f21c1170ebaa24a954ad6b2baf619b3734c338ec74f5ac87515e&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2014%20Sep%202022%2017%3A36%3A42%20GMT" class="img-fluid" alt="...."><br><br>
                      <a href="#" class=""onclick="bt4()">Asisstir</a>
                      </div><p>___________________________________________________________________________________________________</p>
                       <div class="container">
