desfazendo aplicação sinopse

--- a/index.html
+++ b/index.html
@@ -60,20 +60,12 @@
          <div class="container 1">
             <div1 class="row">
              <div class="col-md-3">
-                 <img src="https://media-private.canva.com/eDMzI/MAFMKgeDMzI/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220913%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220913T084954Z&X-Amz-Expires=82335&X-Amz-Signature=a3ebdb0fde927911e2bfec92980fbfb2d3810cfdba0218c2e5669303d6bb9c2d&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2014%20Sep%202022%2007%3A42%3A09%20GMT" class="img-fluid" alt="...."><p class="discrim">
-                  2022 | 12 | 2h 5min | Ação e aventura
-                  Nesta sequência do primeiro filme, os irmãos Elric encontram o oponente mais difícil até agora: um serial killer com uma grande cicatriz na testa.
-                  Estrelando:Ryosuke Yamada,Tsubasa Honda,Dean Fujioka</p>
+                 <img src="https://media-private.canva.com/eDMzI/MAFMKgeDMzI/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220913%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220913T084954Z&X-Amz-Expires=82335&X-Amz-Signature=a3ebdb0fde927911e2bfec92980fbfb2d3810cfdba0218c2e5669303d6bb9c2d&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2014%20Sep%202022%2007%3A42%3A09%20GMT" class="img-fluid" alt="....">
                  <br><br>
                  <a href="#" class=""onclick="bta()">Asisstir</a>
                  </div>
                  <div class="col-md-3">
-                 <img src="https://media-private.canva.com/mgtyQ/MAFMKrmgtyQ/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220913%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220913T191226Z&X-Amz-Expires=43521&X-Amz-Signature=160c533379c9fa99f7262557332d798230f00f268e0c90f4b2b9e30bc35076de&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2014%20Sep%202022%2007%3A17%3A47%20GMT" class="img-fluid" alt="...."><p class="discrim">LUTADOR DE RUA
-                  16(Blood and Bone)
-                  2009 | 93 min
-                  Estreia: 16/12/2009
-                  Estados Unidos
-                  Ação Em Los Angeles, Isaiah é ex presidiário que entra no mundo do crime organizado e lutas clandestinas para cumprir uma promessa a um amigo morto e proteger a sua família.</p>
+                 <img src="https://media-private.canva.com/mgtyQ/MAFMKrmgtyQ/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220913%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220913T191226Z&X-Amz-Expires=43521&X-Amz-Signature=160c533379c9fa99f7262557332d798230f00f268e0c90f4b2b9e30bc35076de&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2014%20Sep%202022%2007%3A17%3A47%20GMT" class="img-fluid" alt="....">
                   <br><br>
                   <a href="#" class=""onclick="bto()">Asisstir</a>
                </div>
