teste de filmes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                    <div class="centro">
 
                     <h5> EBS FLIX INFORMA <br> Site em construção
-                      <br> em breve as series estaram disponivel
+                      <br> em breve as series estara disponivel
                       </h5>
 
                     </div>
