--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>  
   <div class="nome text-center">
-      <h1>EBS FLIX </h1>     
+      <h1>EBS FLIX online </h1>     
   </div>
     <nav class="navbar navbar-expand-lg bg-sucesso" height="30">
       <div class="container">
