--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
          <div class="container 1">
             <div1 class="row">
              <div class="col-md-3">
-                 <img src="https://media-private.canva.com/eDMzI/MAFMKgeDMzI/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220913%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220913T084954Z&X-Amz-Expires=82335&X-Amz-Signature=a3ebdb0fde927911e2bfec92980fbfb2d3810cfdba0218c2e5669303d6bb9c2d&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2014%20Sep%202022%2007%3A42%3A09%20GMT" class="img-fluid" alt="....">
+                 <img src="img/a vingança de scar canva.png" class="img-fluid" alt="....">
                  <br><br><!--filme a vingança de scar-->
                  <a href="#" class=""onclick="bta()">Asisstir</a>
                  </div>
                  <div class="col-md-3">
-                 <img src="https://media-private.canva.com/mgtyQ/MAFMKrmgtyQ/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220913%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220913T191226Z&X-Amz-Expires=43521&X-Amz-Signature=160c533379c9fa99f7262557332d798230f00f268e0c90f4b2b9e30bc35076de&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2014%20Sep%202022%2007%3A17%3A47%20GMT" class="img-fluid" alt="....">
+                 <img src="https://media-private.canva.com/mgtyQ/MAFMKrmgtyQ/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220915%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220915T191226Z&X-Amz-Expires=79521&X-Amz-Signature=aa613fbef34bb2d7aec3cbce4b492d44ad5aa8d4f6f716af7c047c9464f10184&X-Amz-SignedHeaders=host&response-expires=Fri%2C%2016%20Sep%202022%2017%3A17%3A47%20GMT" class="img-fluid" alt="....">
                   <br><br><!--lutador de rua-->
                   <a href="#" class=""onclick="bto()">Asisstir</a>
                </div>
