--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
          <div class="container 1">
             <div1 class="row">
              <div class="col-md-3">
-                 <img src="img/a vingança de scar canva.png" class="img-fluid" alt="....">
+                 <img src="https://media-private.canva.com/eDMzI/MAFMKgeDMzI/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220916%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220916T084954Z&X-Amz-Expires=28335&X-Amz-Signature=087cc56349187a54768e037e66031994b704cae83909bbda176806e59a646884&X-Amz-SignedHeaders=host&response-expires=Fri%2C%2016%20Sep%202022%2016%3A42%3A09%20GMT" class="img-fluid" alt="....">
                  <br><br><!--filme a vingança de scar-->
                  <a href="#" class=""onclick="bta()">Asisstir</a>
                  </div>
